[tool.poetry]
name = "dlite-docs"
version = "0.0.0"
description = "Documentation for dlite"
authors = ["adamghill <adam@adamghill.com>"]
license = "MIT"
repository = "https://github.com/adamghill/dlite/"
homepage = "https://dlitejs.com"
documentation = "https://dlitejs.com"

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/adamghill"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Sphinx = "*"
linkify-it-py = "*"
myst-parser = "*"
furo = "*"
sphinx-copybutton = "*"
sphinx-autobuild = "*"
toml = "*"
attrs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
